<resources>
    <string name="app_name">Ooush Fitness</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="login_fragment_label">OOUSH</string>
    <string name="dashboard_fragment_label">OOUSH</string>
    <string name="sign_up_fragment_label">OOUSH SIGN UP</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- Strings used for content description -->
    <string name="logo_content_description">Ooush fitness logotype</string>
    <!-- Strings used for user login -->
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="connection_error">"An error occurred, check your internet connection"</string>
    <!-- Strings used for user registration -->
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="code">Code</string>
    <string name="email_address">Email Address</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwords_dont_match_warning">Passwords do not match</string>
    <string name="not_successful">Not successful</string>
</resources>