<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/LoginFragment">

    <fragment
            android:id="@+id/LoginFragment"
            android:name="com.example.ooushfitness.fragments.LoginFragment"
            android:label="@string/login_fragment_label"
            tools:layout="@layout/fragment_login">

        <action
                android:id="@+id/action_LoginFragment_to_DashboardFragment"
                app:destination="@id/DashboardFragment"/>
        <action
                android:id="@+id/action_LoginFragment_to_SignupFragment"
                app:destination="@id/SignupFragment"/>
    </fragment>
    <fragment
            android:id="@+id/DashboardFragment"
            android:name="com.example.ooushfitness.fragments.DashboardFragment"
            android:label="@string/dashboard_fragment_label"
            tools:layout="@layout/fragment_dashboard">

        <action
                android:id="@+id/action_DashboardFragment_to_LoginFragment"
                app:destination="@id/LoginFragment"/>
    </fragment>
    <fragment
            android:id="@+id/SignupFragment"
            android:name="com.example.ooushfitness.fragments.SignupFragment"
            android:label="@string/sign_up_fragment_label"
            tools:layout="@layout/fragment_signup">

        <action
                android:id="@+id/action_SignupFragment_to_LoginFragment"
                app:destination="@id/LoginFragment"/>
    </fragment>
</navigation>