<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment"
        tools:layout_editor_absoluteY="-35dp"
        tools:layout_editor_absoluteX="0dp">

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="textAutoComplete"
            android:hint="@string/first_name"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextEnterFirstName"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="620dp"
            android:autofillHints="Enter First Name" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="textAutoComplete"
            android:hint="@string/last_name"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextEnterLastName"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="555dp"
            android:autofillHints="Enter Last Name" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="phone"
            android:hint="@string/phone_number"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextPhoneNumber"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="490dp"
            android:autofillHints="Enter Phone Number" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="textAutoComplete"
            android:hint="@string/enter_username"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextEnterUserName"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="425dp"
            android:autofillHints="Enter Username" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextEnterEmailAddress"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="360dp"
            android:autofillHints="Enter Email Address" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextPassword"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="295dp"
            android:autofillHints="Enter Password" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:inputType="textVisiblePassword"
            android:hint="@string/confirm_password"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextConfirmPassword"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            android:layout_marginBottom="230dp"
            android:autofillHints="Confirm Password" />

    <Button
            android:id="@+id/button_sign_up"
            android:layout_width="243dp"
            android:layout_height="67dp"
            android:text="@string/sign_up"
            android:fontFamily="@font/montserrat_light"
            android:textSize="20sp"
            android:background="@drawable/button_background"
            android:layout_marginBottom="140dp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
            android:layout_width="72dp"
            android:layout_height="67dp"
            android:id="@+id/progressBar"
            android:indeterminateTint="@color/ooush_primary"
            android:progressDrawable="@drawable/circular_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/button_sign_up"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_alignParentBottom="true"
            app:layout_constraintTop_toTopOf="@+id/button_sign_up" />

    <TextView
            android:id="@+id/register_text"
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@drawable/button_text_color"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="80dp" />

</androidx.constraintlayout.widget.ConstraintLayout>