<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.LoginFragment">

    <EditText
            android:layout_width="350dp"
            android:layout_height="67dp"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_username"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextTextEmailAddress"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="572dp"
            android:autofillHints="Enter Username" />

    <EditText
            android:layout_width="350dp"
            android:layout_height="67dp"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            android:fontFamily="@font/montserrat_light"
            android:textAlignment="center"
            android:ems="10"
            android:textSize="15sp"
            android:id="@+id/editTextTextPassword"
            android:background="@drawable/input_background"
            android:textColor="@color/ooush_highlight_text"
            android:textColorHint="@color/ooush_highlight_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginBottom="472dp"
            android:autofillHints="Enter Password" />

    <TextView
            android:id="@+id/login_text"
            android:layout_width="243dp"
            android:layout_height="50dp"
            android:fontFamily="@font/montserrat_light"
            android:textColor="@drawable/button_text_color"
            android:textSize="15sp"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="404dp" />

    <ProgressBar
            android:layout_width="72dp"
            android:layout_height="69dp"
            android:id="@+id/progressBar"
            android:indeterminateTint="@color/ooush_primary"
            android:progressDrawable="@drawable/circular_progress_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="148dp" />

    <Button
            android:id="@+id/button_login"
            android:layout_width="243dp"
            android:layout_height="67dp"
            android:text="@string/login"
            android:fontFamily="@font/montserrat_light"
            android:textSize="20sp"
            android:background="@drawable/button_background"
            android:layout_marginBottom="332dp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5" />

    <Button
            android:id="@+id/button_sign_up"
            android:layout_width="243dp"
            android:layout_height="67dp"
            android:text="@string/signup"
            android:fontFamily="@font/montserrat_light"
            android:textSize="20sp"
            android:background="@drawable/button_background_subtle"
            android:textColor="@drawable/button_text_color"
            android:layout_marginBottom="240dp"
            app:backgroundTint="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>